<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_users"
        android:icon="@drawable/ic_people_purple_24dp"
        android:title="@string/users"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_enigma"
        android:icon="@drawable/ic_games_puple_24dp"
        android:title="@string/enigma"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/ic_poll_purple_24dp"
        android:title="@string/leaderboard"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/ic_forum_purple_24dp"
        android:title="@string/forum"
        app:showAsAction="ifRoom" />
</menu>
