<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.EnigmaFragment"
    android:padding="@dimen/app_padding">

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/btn_sort_easy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/btn_sort_easy"/>

        <Button
            android:id="@+id/btn_sort_hard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/btn_sort_hard"/>

        <Button
            android:id="@+id/btn_sort_random"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/btn_sort_random"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_enigmas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_buttons"
        android:layout_alignParentBottom="true"/>

    <ProgressBar
        android:id="@+id/progress_loading"
        android:layout_width="wrap_content"
        android:visibility="visible"
        tools:visibility="visible"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/text_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/no_enigmas_found"
        android:textSize="@dimen/list_item_text_size"
        android:layout_centerInParent="true"/>

</RelativeLayout>