<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.UserFragment">

    <LinearLayout
        android:id="@+id/layout_user_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/list_category" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_search_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionSearch"
                android:hint="@string/prompt_username"
                android:layout_toLeftOf="@+id/btn_search_user"
                android:layout_toStartOf="@+id/btn_search_user" />

            <ImageButton
                android:id="@+id/btn_search_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_search_purple_24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/search_icon_description"/>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_search_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:textSize="@dimen/list_category"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</FrameLayout>